[tool.poetry]
name = "cli app"
version = "0.1.0"
description = "Text bot"
authors = ["Yuri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv -s"
testpaths = [
    "tests.py"
]